@@ -196,9 +196,9 @@ ERROR:  geometry contains non-closed rings
 226|t
 ERROR:  ST_TileEnvelope: Invalid tile zoom value, -1
 ERROR:  ST_TileEnvelope: Invalid tile y value, 1
-229|SRID=3857;POLYGON((-20037510 -20037510,-20037510 20037510,20037510 20037510,20037510 -20037510,-20037510 -20037510))
-230|SRID=3857;POLYGON((0 -2504688.75,0 0,2504688.75 0,2504688.75 -2504688.75,0 -2504688.75))
-231|SRID=3857;POLYGON((17532821.25 -20037510,17532821.25 -17532821.25,20037510 -17532821.25,20037510 -20037510,17532821.25 -20037510))
+229|SRID=3857;POLYGON((-20037508.342789 -20037508.342789,-20037508.342789 20037508.342789,20037508.342789 20037508.342789,20037508.342789 -20037508.342789,-20037508.342789 -20037508.342789))
+230|SRID=3857;POLYGON((0 -2504688.54284862,0 0,2504688.54284862 0,2504688.54284862 -2504688.54284862,0 -2504688.54284862))
+231|SRID=3857;POLYGON((17532819.7999404 -20037508.342789,17532819.7999404 -17532819.7999404,20037508.342789 -17532819.7999404,20037508.342789 -20037508.342789,17532819.7999404 -20037508.342789))
 232|POLYGON((0 -12.5,0 0,12.5 0,12.5 -12.5,0 -12.5))
 233|POLYGON((87.5 -100,87.5 -87.5,100 -87.5,100 -100,87.5 -100))
 234|POLYGON((-100 87.5,-100 100,-87.5 100,-87.5 87.5,-100 87.5))
